one more fix on section jumps

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -317,7 +317,7 @@ section.pay-study-22 {
   }
 
   aside#toc-menu {
-    max-width: 200px;
+    width: 200px;
   }
 
   @media (max-width: 1023px) {
